--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --font-fg: "Founders Grotesk", sans-serif;
+}
+
 @layer base {
   @font-face {
     font-family: "Founders Grotesk";
